# voice-tools-py

./: .gitignore  README.md  pyproject.toml
src/voice_tools/: __init__.py  cli.py  speech.py
tests/: test_speech.py
